--- a/Corona-Warn-App/src/main/res/navigation/nav_graph.xml
+++ b/Corona-Warn-App/src/main/res/navigation/nav_graph.xml
@@ -236,7 +236,20 @@
             app:popUpTo="@id/submissionResultFragment"
             app:popUpToInclusive="true" />
     </fragment>
-
+    <fragment
+        android:id="@+id/submissionTestRequestFragment"
+        android:name="be.sciensano.coronalert.ui.submission.SubmissionTestRequestFragment"
+        android:label="fragment_submission_test_request"
+        tools:layout="@layout/fragment_submission_test_request">
+        <action
+            android:id="@+id/action_submissionTestRequestFragment_to_submissionTestRequestSaveFragment"
+            app:destination="@id/submissionTestRequestSaveFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/submissionTestRequestSaveFragment"
+        android:name="be.sciensano.coronalert.ui.submission.SubmissionTestRequestSaveFragment"
+        android:label="fragment_submission_test_request_save"
+        tools:layout="@layout/fragment_submission_test_request_save"></fragment>
     <fragment
         android:id="@+id/submissionIntroFragment"
         android:name="de.rki.coronawarnapp.ui.submission.SubmissionIntroFragment"
@@ -249,6 +262,9 @@
         <action
             android:id="@+id/action_submissionIntroFragment_to_submissionDispatcherFragment"
             app:destination="@id/submissionDispatcherFragment" />
+        <action
+            android:id="@+id/action_submissionIntroFragment_to_submissionTestRequestFragment"
+            app:destination="@id/submissionTestRequestFragment" />
     </fragment>
     <activity
         android:id="@+id/launcherActivity"
