--- a/Corona-Warn-App/src/main/res/navigation/nav_graph.xml
+++ b/Corona-Warn-App/src/main/res/navigation/nav_graph.xml
@@ -209,6 +209,9 @@
             app:destination="@id/submissionDoneFragment"
             app:popUpTo="@id/submissionDoneFragment"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_submissionResultPositiveOtherWarningFragment_to_submissionKeysListFragment"
+            app:destination="@id/submissionKeysListFragment" />
     </fragment>
     <fragment
         android:id="@+id/submissionResultFragment"
@@ -244,6 +247,22 @@
         <action
             android:id="@+id/action_submissionTestRequestFragment_to_submissionTestRequestSaveFragment"
             app:destination="@id/submissionTestRequestSaveFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/submissionKeysListFragment"
+        android:name="be.sciensano.coronalert.ui.submission.SubmissionKeysListFragment"
+        android:label="fragment_submission_keys_list"
+        tools:layout="@layout/fragment_submission_keys_list">
+        <action
+            android:id="@+id/action_submissionKeysListFragment_to_submissionResultFragment"
+            app:destination="@id/submissionResultFragment"
+            app:popUpTo="@id/submissionResultFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_submissionKeysListFragment_to_submissionDoneFragment"
+            app:destination="@id/submissionDoneFragment"
+            app:popUpTo="@id/submissionDoneFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/submissionTestRequestSaveFragment"
