--- a/Corona-Warn-App/src/main/res/drawable-night/ic_main_illustration_invalid.xml
+++ b/Corona-Warn-App/src/main/res/drawable-night/ic_main_illustration_invalid.xml
@@ -22,28 +22,28 @@
             android:fillColor="#1E1E1F"
             android:fillType="nonZero"
             android:pathData="M80.217,122.181L40.234,129.618C36.161,130.375 32.247,127.681 31.49,123.601L12.972,23.647C12.216,19.566 14.905,15.644 18.977,14.887L58.961,7.45C63.034,6.693 66.948,9.387 67.705,13.467L86.223,113.421C86.979,117.502 84.29,121.424 80.217,122.181"
-            android:strokeWidth="1" />
+            android:strokeWidth="1"
         <group>
             <group>
                 <path
                     android:fillColor="#FC2251"
                     android:fillType="nonZero"
                     android:pathData="M36.415,85.351C35.736,85.478 35.005,85.208 34.67,84.603C34.452,84.207 34.438,83.788 34.628,83.285L46.084,53.032C46.221,52.67 46.555,52.047 47.266,51.915C47.975,51.782 48.512,52.245 48.767,52.534L70.281,76.667C70.642,77.069 70.777,77.467 70.714,77.915C70.619,78.596 70.037,79.11 69.362,79.234L36.415,85.351Z"
-                    android:strokeWidth="1" />
+                    android:strokeWidth="1"
             </group>
             <group>
                 <path
                     android:fillColor="#17191A"
                     android:fillType="nonZero"
                     android:pathData="M51.525,74.944C52.605,74.744 53.643,75.458 53.843,76.542C54.043,77.624 53.33,78.663 52.249,78.864C51.169,79.065 50.131,78.35 49.931,77.268C49.731,76.185 50.445,75.145 51.525,74.944"
-                    android:strokeWidth="1" />
+                    android:strokeWidth="1"
             </group>
             <group>
                 <path
                     android:fillColor="#17191A"
                     android:fillType="nonZero"
                     android:pathData="M48.988,61.224C47.907,61.424 47.181,62.397 47.366,63.397C47.489,64.066 50.032,72.333 50.043,72.369C50.184,72.805 50.662,73.077 51.162,72.984C51.663,72.891 52.012,72.467 51.986,72.007C51.985,71.97 51.402,63.339 51.279,62.67C51.094,61.67 50.069,61.023 48.988,61.224"
-                    android:strokeWidth="1" />
+                    android:strokeWidth="1"
             </group>
         </group>
         <path
