--- a/Corona-Warn-App/src/main/res/drawable/ic_splash_logo.xml
+++ b/Corona-Warn-App/src/main/res/drawable/ic_splash_logo.xml
@@ -7,38 +7,32 @@
     android:viewportHeight="284">
     <path
         android:name="path"
-        android:pathData="M 121.7 12.6 L 121.3 12.6 C 99.2 12.6 81.3 19.5 81.3 28.1 C 81.3 33.3 88 37.9 98.2 40.7 C 111.1 45.3 112.9 64 113.1 71.6 L 113.1 75 C 113.1 79.3 116.6 82.7 121 82.9 L 121.6 82.9 C 126 82.7 129.5 79.3 129.5 75 L 129.5 71.6 C 129.7 63.9 131.5 45.2 144.4 40.7 C 154.6 37.9 161.3 33.3 161.3 28.1 C 161.6 19.5 143.7 12.6 121.7 12.6 Z M 113.2 43.2 L 112.9 43.2 L 113.2 43.2 Z M 129.8 43.2 L 130.1 43.2 L 129.8 43.2 Z"
-        android:fillColor="#25ba6c"
+        android:pathData="M 121.2 7 L 120.8 7 C 99 7 81.3 14.2 81.3 23 C 81.3 28.4 87.9 33.2 98 36.1 C 110.8 40.8 112.6 60.2 112.8 68.1 L 112.8 71.6 C 112.8 76 116.3 79.6 120.7 79.8 L 121.3 79.8 C 125.7 79.6 129.2 76 129.2 71.6 L 129.2 68.1 C 129.4 60.2 131.2 40.8 144 36.1 C 154.1 33.2 160.7 28.4 160.7 23 C 160.7 14.2 143 7 121.2 7 Z M 112.8 38.7 L 112.5 38.7 L 112.8 38.7 Z M 129.2 38.7 L 129.5 38.7 L 129.2 38.7 Z"
+        android:fillColor="#556666"
         android:strokeWidth="1"/>
     <path
         android:name="path_1"
-        android:fillAlpha="0.70"
-        android:pathData="M 162.8 96 C 162.1 96 161.4 95.9 160.7 95.6 C 157.9 94.5 156.6 91.5 157.8 88.8 L 165.3 71.5 C 166.4 68.9 169.6 67.6 172.4 68.7 C 175.2 69.8 176.5 72.8 175.3 75.5 L 167.8 92.8 C 166.9 94.8 164.9 96 162.8 96 Z"
-        android:fillColor="#25BA6C"
+        android:pathData="M 161.8 93.4 C 161.1 93.4 160.4 93.3 159.7 93 C 157 91.9 155.7 88.7 156.8 86 L 164.2 68 C 165.3 65.3 168.5 64 171.2 65.1 C 173.9 66.2 175.2 69.4 174.1 72.1 L 166.7 90.1 C 166 92.1 164 93.4 161.8 93.4 Z"
+        android:fillColor="#6b8384"
         android:strokeWidth="1"/>
     <path
         android:name="path_2"
-        android:fillAlpha="0.50"
-        android:pathData="M 230.2 82.4 C 230.2 82.4 230.2 82.4 230.2 82.4 L 230.1 82.3 C 220.4 73 209.4 68.6 205.5 72.3 C 203.1 74.6 203.9 79.4 207.1 84.9 C 210.7 92.3 202.9 101.3 199.5 104.7 L 198 106.2 L 197.9 106.2 C 195.9 108.1 195.9 111.1 197.8 113 C 197.8 113.1 197.9 113.1 197.9 113.2 C 198 113.2 198 113.3 198.1 113.3 C 200.1 115.1 203.3 115 205.2 113.2 L 205.2 113.1 L 206.7 111.6 C 210.3 108.3 219.7 100.9 227.5 104.3 C 233.3 107.4 238.3 108.1 240.7 105.8 C 244.5 102.1 239.8 91.6 230.2 82.4 Z M 212.4 92.2 L 212.3 92.1 C 212.3 92.2 212.4 92.2 212.4 92.2 Z M 219.7 99.2 L 219.8 99.3 L 219.7 99.2 Z"
-        android:fillColor="#25BA6C"
+        android:pathData="M 228.5 79.3 C 228.5 79.3 228.5 79.3 228.5 79.3 L 228.4 79.2 C 218.8 69.6 207.9 65 204 68.9 C 201.6 71.3 202.4 76.3 205.6 82 C 209.1 89.7 201.4 99 198 102.5 L 196.5 104 L 196.4 104 C 194.5 105.9 194.4 109 196.3 111 C 196.3 111.1 196.4 111.1 196.4 111.2 C 196.5 111.3 196.5 111.3 196.6 111.3 C 198.6 113.1 201.7 113.1 203.6 111.2 L 203.6 111.1 L 205.1 109.6 C 208.7 106.2 218 98.5 225.6 102 C 231.3 105.2 236.3 106 238.7 103.6 C 242.7 99.7 238.1 88.8 228.5 79.3 Z M 210.9 89.5 L 210.8 89.4 C 210.9 89.4 210.9 89.4 210.9 89.5 Z M 218.1 96.7 L 218.2 96.8 L 218.1 96.7 Z"
+        android:fillColor="#9ea8a6"
         android:strokeWidth="1"/>
     <path
         android:name="path_3"
-        android:fillAlpha="0.70"
-        android:pathData="M 80.2 96 C 78.1 96 76.1 94.8 75.2 92.8 L 67.7 75.5 C 66.6 72.9 67.9 69.8 70.6 68.7 C 73.4 67.6 76.5 68.9 77.7 71.5 L 85.2 88.8 C 86.3 91.4 85 94.5 82.3 95.6 C 81.6 95.9 80.9 96 80.2 96 Z"
-        android:fillColor="#25BA6C"
+        android:pathData="M 80.2 93.4 C 78.1 93.4 76.1 92.2 75.2 90.1 L 67.8 72.1 C 66.7 69.4 68 66.2 70.7 65.1 C 73.4 64 76.6 65.3 77.7 68 L 85.1 86 C 86.2 88.7 84.9 91.9 82.2 93 C 81.5 93.3 80.8 93.4 80.2 93.4 Z"
+        android:fillColor="#6b8384"
         android:strokeWidth="1"/>
     <path
         android:name="path_4"
-        android:fillAlpha="0.50"
-        android:pathData="M 13 82.2 C 13 82.2 13 82.2 13 82.2 L 12.9 82.3 C 3.2 91.6 -1.4 102.1 2.5 105.8 C 4.9 108.1 9.9 107.3 15.7 104.3 C 23.5 100.9 32.8 108.3 36.5 111.6 L 38 113.1 L 38 113.2 C 40 115.1 43.1 115.1 45.1 113.3 C 45.2 113.3 45.2 113.2 45.3 113.2 C 45.4 113.2 45.4 113.1 45.4 113 C 47.3 111.1 47.2 108.1 45.3 106.2 L 45.2 106.2 L 43.7 104.7 C 40.3 101.3 32.5 92.3 36.1 84.9 C 39.3 79.4 40.1 74.6 37.7 72.3 C 33.7 68.5 22.7 73 13 82.2 Z M 23.3 99.2 L 23.2 99.3 L 23.3 99.2 Z M 30.6 92.2 L 30.7 92.1 L 30.6 92.2 Z"
-        android:fillColor="#25BA6C"
+        android:pathData="M 13.6 79.1 C 13.6 79.1 13.6 79.1 13.6 79.1 L 13.5 79.2 C 3.9 88.8 -0.7 99.7 3.2 103.6 C 5.6 106 10.6 105.2 16.3 102 C 24 98.5 33.3 106.2 36.8 109.6 L 38.3 111.1 L 38.3 111.2 C 40.2 113.1 43.3 113.2 45.3 111.3 C 45.4 111.3 45.4 111.2 45.5 111.2 C 45.6 111.1 45.6 111.1 45.6 111 C 47.4 109 47.4 105.9 45.5 104 L 45.4 104 L 43.9 102.5 C 40.5 98.9 32.8 89.6 36.3 82 C 39.5 76.3 40.3 71.3 37.9 68.9 C 34.1 64.9 23.2 69.5 13.6 79.1 Z M 23.9 96.7 L 23.8 96.8 C 23.8 96.7 23.8 96.7 23.9 96.7 Z M 31.1 89.5 L 31.2 89.4 L 31.1 89.5 Z"
+        android:fillColor="#9ea8a6"
         android:strokeWidth="1"/>
-    <group android:name="group">
-        <path
-            android:name="path_5"
-            android:pathData="M 136.3 252.7 L 104.9 252.7 C 102.1 252.7 100 255.3 100.9 257.9 C 103.7 265.8 111.4 271.4 120.6 271.4 C 129.8 271.4 137.5 265.7 140.3 257.9 C 141.2 255.3 139.1 252.7 136.3 252.7 Z M 199 229.5 L 177.7 212.8 L 177.7 172.7 C 177.7 147 158.9 125.3 133.9 119.5 L 133.9 113.7 C 133.9 106.7 127.9 100.9 120.5 100.9 C 113.2 100.9 107.1 106.6 107.1 113.7 L 107.1 119.5 C 81.9 125.3 63 147 63 172.8 L 63 212.8 L 43.7 230 C 39.5 235.5 44.1 242.7 51.7 242.7 L 191.3 242.7 C 199.2 242.6 203.7 234.9 199 229.5 Z"
-            android:fillColor="#25BA6C"
-            android:strokeWidth="1"/>
-    </group>
+    <path
+        android:name="path_5"
+        android:pathData="M 135.7 255.6 L 104.6 255.6 C 101.8 255.6 99.8 258.3 100.6 261 C 103.3 269.1 111 275 120.1 275 C 129.2 275 136.9 269.1 139.6 261 C 140.5 258.3 138.5 255.6 135.7 255.6 Z M 197.7 231.6 L 176.6 214.3 L 176.6 172.7 C 176.6 146.1 158 123.6 133.2 117.6 L 133.2 111.6 C 133.2 104.3 127.3 98.4 120 98.4 C 112.7 98.4 106.8 104.3 106.8 111.6 L 106.8 117.6 C 81.9 123.6 63.2 146.1 63.2 172.8 L 63.2 214.2 L 63.1 214.2 L 44 232 C 39.9 237.7 44.4 245.2 51.9 245.2 L 190.1 245.2 C 197.9 245.2 202.3 237.2 197.7 231.6 Z"
+        android:fillColor="#25ba6c"
+        android:strokeWidth="1"/>
 </vector>
