--- a/Corona-Warn-App/src/main/res/drawable/ic_splash_logo_round.xml
+++ b/Corona-Warn-App/src/main/res/drawable/ic_splash_logo_round.xml
@@ -7,38 +7,32 @@
     android:viewportHeight="160">
     <path
         android:name="path"
-        android:pathData="M 80.1 18.8 C 80.1 18.8 80.1 18.8 80.1 18.8 L 79.9 18.8 C 69.5 18.8 61 22.1 61 26.1 C 61 28.6 64.2 30.7 69 32.1 C 75.1 34.3 76 43.1 76.1 46.7 L 76.1 48.4 C 76.1 50.4 77.8 52.1 79.9 52.1 L 80.3 52.1 C 82.4 52 84.1 50.4 84.1 48.4 L 84.1 46.7 C 84.2 43.1 85.1 34.2 91.2 32.1 C 96 30.8 99.2 28.6 99.2 26.1 C 99 22.1 90.5 18.8 80.1 18.8 Z M 76.1 33.3 L 76 33.3 L 76.1 33.3 Z M 83.9 33.3 L 84 33.3 L 83.9 33.3 Z"
-        android:fillColor="#25ba6c"
+        android:pathData="M 79.1 22.8 C 79.1 22.8 79.1 22.8 79.1 22.8 L 79 22.8 C 69.8 22.8 62.4 25.8 62.4 29.5 C 62.4 31.8 65.2 33.8 69.4 35 C 74.8 37 75.5 45.1 75.6 48.4 L 75.6 49.8 C 75.6 51.7 77.1 53.2 78.9 53.2 L 79.1 53.2 C 80.9 53.1 82.4 51.6 82.4 49.8 L 82.4 48.4 C 82.5 45.1 83.2 36.9 88.6 35 C 92.8 33.8 95.6 31.8 95.6 29.5 C 95.7 25.8 88.2 22.8 79.1 22.8 Z M 75.6 36.1 L 75.5 36.1 L 75.6 36.1 Z M 82.4 36.1 L 82.5 36.1 L 82.4 36.1 Z"
+        android:fillColor="#556666"
         android:strokeWidth="1"/>
     <path
         android:name="path_1"
-        android:fillAlpha="0.70"
-        android:pathData="M 99.5 58.3 C 99.2 58.3 98.8 58.2 98.5 58.1 C 97.2 57.6 96.6 56.1 97.1 54.9 L 100.7 46.7 C 101.2 45.4 102.7 44.9 104.1 45.4 C 105.4 45.9 106 47.4 105.5 48.6 L 101.9 56.8 C 101.5 57.7 100.5 58.3 99.5 58.3 Z"
-        android:fillColor="#25ba6c"
+        android:pathData="M 96.1 59 C 95.8 59 95.5 58.9 95.2 58.8 C 94.1 58.3 93.5 57 94 55.9 L 97.1 48.4 C 97.6 47.2 98.9 46.7 100 47.2 C 101.1 47.7 101.7 49 101.2 50.1 L 98.1 57.6 C 97.9 58.5 97 59 96.1 59 Z"
+        android:fillColor="#6b8384"
         android:strokeWidth="1"/>
     <path
         android:name="path_2"
-        android:fillAlpha="0.50"
-        android:pathData="M 131.4 51.8 C 131.3 51.8 131.3 51.7 131.4 51.8 C 126.8 47.4 121.5 45.2 119.7 47 C 118.6 48.1 119 50.4 120.5 53 C 122.2 56.5 118.5 60.7 116.9 62.4 L 116.2 63.1 C 115.3 64 115.3 65.4 116.1 66.3 C 116.1 66.3 116.1 66.4 116.2 66.4 C 116.2 66.4 116.3 66.4 116.3 66.5 C 117.3 67.3 118.7 67.3 119.7 66.4 L 120.4 65.7 C 122.1 64.1 126.5 60.6 130.2 62.2 C 132.9 63.6 135.3 64 136.4 62.9 C 138.2 61.2 136 56.2 131.4 51.8 Z M 123 56.5 C 123 56.5 123 56.5 123 56.5 Z M 126.4 59.8 C 126.4 59.8 126.4 59.8 126.4 59.8 Z"
-        android:fillColor="#25ba6c"
+        android:pathData="M 124.1 53.1 C 124.1 53.1 124.1 53.1 124.1 53.1 C 120 49 115.4 47.1 113.8 48.7 C 112.8 49.7 113.1 51.8 114.5 54.2 C 116 57.4 112.7 61.3 111.3 62.8 L 110.7 63.4 C 109.9 64.2 109.9 65.5 110.6 66.4 L 110.7 66.5 L 110.8 66.6 C 111.6 67.4 112.9 67.4 113.8 66.5 L 114.4 65.9 C 115.9 64.5 119.8 61.2 123 62.7 C 125.4 64 127.5 64.4 128.5 63.4 C 130.1 61.7 128.1 57.1 124.1 53.1 Z M 116.7 57.4 Z M 119.7 60.4 C 119.7 60.4 119.7 60.4 119.7 60.4 Z"
+        android:fillColor="#9ea8a6"
         android:strokeWidth="1"/>
     <path
         android:name="path_3"
-        android:fillAlpha="0.70"
-        android:pathData="M 60.5 58.3 C 59.5 58.3 58.5 57.7 58.1 56.8 L 54.5 48.6 C 54 47.3 54.6 45.9 55.9 45.4 C 57.2 44.9 58.7 45.5 59.3 46.7 L 62.9 54.9 C 63.4 56.2 62.8 57.6 61.5 58.1 C 61.1 58.2 60.8 58.3 60.5 58.3 Z"
-        android:fillColor="#25ba6c"
+        android:pathData="M 61.9 59 C 61 59 60.2 58.5 59.8 57.6 L 56.7 50.1 C 56.2 49 56.8 47.6 57.9 47.2 C 59 46.7 60.4 47.3 60.8 48.4 L 63.9 55.9 C 64.4 57 63.8 58.4 62.7 58.8 C 62.4 59 62.2 59 61.9 59 Z"
+        android:fillColor="#6b8384"
         android:strokeWidth="1"/>
     <path
         android:name="path_4"
-        android:fillAlpha="0.50"
-        android:pathData="M 28.7 51.7 C 28.7 51.7 28.7 51.7 28.7 51.7 C 28.7 51.7 28.7 51.7 28.7 51.7 C 24.1 56.1 21.8 61.1 23.7 62.9 C 24.8 64 27.2 63.6 29.9 62.2 C 33.6 60.6 38 64.1 39.7 65.7 L 40.4 66.4 C 41.3 67.3 42.8 67.3 43.8 66.5 C 43.8 66.5 43.9 66.5 43.9 66.4 C 43.9 66.4 43.9 66.3 44 66.3 C 44.9 65.4 44.9 64 43.9 63.1 L 43.2 62.4 C 41.6 60.8 37.9 56.5 39.6 53 C 41.1 50.4 41.5 48.1 40.4 47 C 38.5 45.2 33.3 47.4 28.7 51.7 Z M 33.6 59.8 C 33.6 59.8 33.6 59.8 33.6 59.8 Z M 37 56.5 C 37 56.5 37 56.5 37 56.5 Z"
+        android:pathData="M 34 53 C 34 53.1 33.9 53.1 34 53 C 34 53 34 53 34 53 C 29.9 57.1 28 61.7 29.6 63.3 C 30.6 64.3 32.7 64 35.1 62.6 C 38.3 61.1 42.2 64.4 43.7 65.8 L 44.3 66.4 C 45.1 67.2 46.4 67.2 47.3 66.5 L 47.4 66.4 L 47.5 66.3 C 48.3 65.5 48.3 64.2 47.4 63.3 L 46.8 62.7 C 45.4 61.2 42.1 57.3 43.6 54.1 C 44.9 51.7 45.3 49.6 44.3 48.6 C 42.6 47.1 38 49 34 53 Z M 38.3 60.4 C 38.3 60.4 38.3 60.4 38.3 60.4 Z M 41.3 57.4 Z"
+        android:fillColor="#9ea8a6"
+        android:strokeWidth="1"/>
+    <path
+        android:name="path_5"
+        android:pathData="M 85.2 127.1 L 72.2 127.1 C 71 127.1 70.2 128.2 70.5 129.4 C 71.6 132.8 74.9 135.3 78.7 135.3 C 82.5 135.3 85.7 132.8 86.9 129.4 C 87.2 128.2 86.3 127.1 85.2 127.1 Z M 111.2 117 L 102.3 109.8 L 102.3 92.3 C 102.3 81.1 94.5 71.7 84.1 69.2 L 84.1 66.7 C 84.1 63.7 81.6 61.2 78.6 61.2 C 75.6 61.2 73.1 63.7 73.1 66.7 L 73.1 69.2 C 62.6 71.7 54.8 81.1 54.8 92.3 L 54.8 109.7 L 46.8 117.2 C 45.1 119.6 47 122.7 50.1 122.7 L 108 122.7 C 111.2 122.7 113.1 119.3 111.2 117 Z"
         android:fillColor="#25ba6c"
         android:strokeWidth="1"/>
-    <group android:name="group">
-        <path
-            android:name="path_5"
-            android:pathData="M 87 132.3 L 72.1 132.3 C 70.8 132.3 69.8 133.5 70.2 134.8 C 71.5 138.5 75.2 141.2 79.5 141.2 C 83.8 141.2 87.5 138.5 88.8 134.8 C 89.3 133.6 88.3 132.3 87 132.3 Z M 116.7 121.4 L 106.6 113.5 L 106.6 94.5 C 106.6 82.3 97.7 72.1 85.9 69.3 L 85.9 66.6 C 85.9 63.3 83.1 60.6 79.6 60.6 C 76.1 60.6 73.3 63.3 73.3 66.6 L 73.3 69.3 C 61.4 72 52.5 82.3 52.5 94.5 L 52.5 113.4 L 43.4 121.6 C 41.4 124.2 43.6 127.6 47.2 127.6 L 113 127.6 C 116.7 127.6 118.9 123.9 116.7 121.4 Z"
-            android:fillColor="#25BA6C"
-            android:strokeWidth="1"/>
-    </group>
 </vector>
