--- a/Corona-Warn-App/src/main/res/drawable-night/ic_settings_illustration_bluetooth_off.xml
+++ b/Corona-Warn-App/src/main/res/drawable-night/ic_settings_illustration_bluetooth_off.xml
@@ -144,6 +144,7 @@
         android:strokeWidth="1" />
     <path
         android:name="path_20"
+        android:fillAlpha="0.60"
         android:fillColor="#25ba6c"
         android:pathData="M 83.6 119.9 L 82.3 119.9 C 76.6 119.5 71.3 116.9 67.5 112.6 C 63.7 108.2 61.8 102.6 62.2 96.8 C 62.9 84.8 73.2 75.6 85.1 76.3 C 90.8 76.7 96.1 79.3 99.9 83.6 C 103.7 88 105.6 93.6 105.2 99.4 C 104.5 110.9 94.9 119.9 83.6 119.9 Z M 83.7 78 C 73.4 78 64.7 86.2 64 96.8 C 63.7 102.1 65.4 107.3 68.9 111.3 C 72.4 115.3 77.2 117.7 82.4 118 C 93.2 118.7 102.6 110.2 103.3 99.2 C 103.6 93.9 101.9 88.7 98.4 84.7 C 94.9 80.7 90.1 78.3 84.9 78 L 83.7 78 Z"
         android:strokeWidth="1" />
