--- a/Corona-Warn-App/src/main/res/drawable-night/ic_settings_notification_circle.xml
+++ b/Corona-Warn-App/src/main/res/drawable-night/ic_settings_notification_circle.xml
@@ -1,18 +1,19 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:name="vector"
     android:width="40dp"
     android:height="40dp"
     android:viewportWidth="40"
     android:viewportHeight="40">
     <path
-        android:pathData="M20,0L20,0A20,20 0,0 1,40 20L40,20A20,20 0,0 1,20 40L20,40A20,20 0,0 1,0 20L0,20A20,20 0,0 1,20 0z"
+        android:name="path"
+        android:pathData="M 20 0 C 25.3 0 30.4 2.1 34.1 5.9 C 37.8 9.7 40 14.7 40 20 C 40 25.3 37.9 30.4 34.1 34.1 C 30.3 37.8 25.3 40 20 40 C 14.7 40 9.6 37.9 5.9 34.1 C 2.2 30.3 0 25.3 0 20 C 0 14.7 2.1 9.6 5.9 5.9 C 9.7 2.2 14.7 0 20 0 Z"
+        android:fillColor="#000000"
         android:strokeWidth="1"
-        android:fillColor="#232324"
-        android:fillType="evenOdd"
-        android:strokeColor="#00000000"/>
+        android:fillType="evenOdd"/>
     <path
-        android:pathData="M20,10C19.172,10 18.5,10.672 18.5,11.5L18.5,12.1953C15.9132,12.8621 14,15.2048 14,18L14,24L12,26L12,27L18.2695,27C18.0934,27.3039 18.0005,27.6488 18,28C18,29.1046 18.8954,30 20,30C21.1046,30 22,29.1046 22,28C21.9989,27.6486 21.9053,27.3037 21.7285,27L28,27L28,26L26,24L26,18C26,15.2048 24.0868,12.8621 21.5,12.1953L21.5,11.5C21.5,10.672 20.828,10 20,10ZM20,14C22.206,14 24,15.794 24,18L24,24L24,24.8281L24.1719,25L15.8281,25L16,24.8281L16,24L16,18C16,15.794 17.794,14 20,14Z"
-        android:strokeWidth="1"
-        android:fillColor="#25BA6C"
-        android:fillType="nonZero"
-        android:strokeColor="#00000000"/>
+        android:name="path_1"
+        android:pathData="M 29.9 25.9 L 27.2 23.6 L 27.2 18.2 C 27.2 14.7 24.8 11.7 21.6 11 L 21.6 10.2 C 21.6 9.2 20.9 8.5 19.9 8.5 C 18.9 8.5 18.2 9.2 18.2 10.2 L 18.2 11 C 15 11.8 12.5 14.7 12.5 18.2 L 12.5 23.6 L 10 26 C 9.5 26.7 10 27.7 11.1 27.7 L 29.1 27.7 C 29.9 27.6 30.5 26.6 29.9 25.9 Z M 21.8 29 L 17.7 29 C 17.3 29 17.1 29.4 17.2 29.7 C 17.6 30.8 18.5 31.5 19.7 31.5 C 20.9 31.5 21.9 30.8 22.2 29.7 C 22.5 29.3 22.3 29 21.8 29 Z"
+        android:fillColor="#25ba6c"
+        android:strokeWidth="1"/>
 </vector>
