--- a/Corona-Warn-App/src/main/res/drawable/ic_settings_notification_inactive.xml
+++ b/Corona-Warn-App/src/main/res/drawable/ic_settings_notification_inactive.xml
@@ -1,12 +1,168 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:name="vector"
     android:width="40dp"
     android:height="41dp"
     android:viewportWidth="40"
     android:viewportHeight="41">
     <path
-        android:fillColor="#FC2251"
-        android:fillType="nonZero"
-        android:pathData="M14.2583,16.2546L15.9991,17.995L16,24.8281L15.8281,25L23.0031,25L25.0031,27L21.7285,27C21.8758,27.2531 21.9654,27.5348 21.9918,27.825L22,28C22,29.1046 21.1046,30 20,30C18.8954,30 18,29.1046 18,28C18.0005,27.6488 18.0934,27.3039 18.2695,27L18.2695,27L12,27L12,26L14,24L14,18C14,17.3927 14.0903,16.8067 14.2583,16.2546ZM12.7856,11.7951L12.8521,11.8538L28.1462,27.1479C28.4219,27.4236 28.4219,27.8705 28.1462,28.1462C27.8917,28.4007 27.4913,28.4202 27.2144,28.2049L27.1479,28.1462L11.8538,12.8521C11.5781,12.5764 11.5781,12.1295 11.8538,11.8538C12.1083,11.5993 12.5087,11.5798 12.7856,11.7951ZM20,10C20.828,10 21.5,10.672 21.5,11.5L21.5,11.5L21.5,12.1953C24.0868,12.8621 26,15.2048 26,18L26,18L26,24L28,26L27.9991,26.002L23.9991,22.002L24,18C24,15.8608 22.3131,14.1091 20.1994,14.0049L20,14C18.896,14 17.8952,14.4493 17.1708,15.1747L15.7578,13.7618C16.5042,13.0167 17.4462,12.4669 18.5,12.1953L18.5,12.1953L18.5,11.5C18.5,10.672 19.172,10 20,10Z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:name="path"
+        android:pathData="M 29.9 25.9 L 27.2 23.6 L 27.2 18.2 C 27.2 14.7 24.8 11.7 21.6 11 L 21.6 10.2 C 21.6 9.2 20.9 8.5 19.9 8.5 C 18.9 8.5 18.2 9.2 18.2 10.2 L 18.2 11 C 15 11.8 12.5 14.7 12.5 18.2 L 12.5 23.6 L 10 26 C 9.5 26.7 10 27.7 11.1 27.7 L 29.1 27.7 C 29.9 27.6 30.5 26.6 29.9 25.9 Z M 21.8 29 L 17.7 29 C 17.3 29 17.1 29.4 17.2 29.7 C 17.6 30.8 18.5 31.5 19.7 31.5 C 20.9 31.5 21.9 30.8 22.2 29.7 C 22.5 29.3 22.3 29 21.8 29 Z"
+        android:fillColor="#fc2251"
+        android:strokeWidth="1"/>
+    <group android:name="svgid_6_"/>
+    <group android:name="wrapper_1">
+        <clip-path
+            android:name="svgid_6__1"
+            android:pathData="M 0 0 Z"/>
+        <group android:name="group">
+            <group android:name="svgid_8_"/>
+            <group android:name="wrapper">
+                <clip-path
+                    android:name="svgid_8__1"
+                    android:pathData="M 0 0 Z"/>
+                <path
+                    android:name="path_1"
+                    android:pathData="M 19.4 -53.6 L 42.9 -53.6 L 42.9 -26.5 L 19.4 -26.5 Z"
+                    android:fillColor="#ffffff"
+                    android:strokeWidth="1"/>
+            </group>
+        </group>
+    </group>
+    <path
+        android:name="path_2"
+        android:pathData="M 21.88 -33.578 L 38.809 -47.786 L 39.452 -47.02 L 22.523 -32.812 Z"
+        android:fillColor="#fc2251"
+        android:strokeWidth="1"/>
+    <group android:name="svgid_10_"/>
+    <group android:name="wrapper_3">
+        <clip-path
+            android:name="svgid_10__1"
+            android:pathData="M 0 0 Z"/>
+        <group android:name="group_1">
+            <path
+                android:name="path_3"
+                android:pathData="M -177.6 -93.9 L 197.4 -93.9 L 197.4 135.1 L -177.6 135.1 Z"
+                android:fillColor="#fc2251"
+                android:strokeWidth="1"/>
+            <group android:name="svgid_12_"/>
+            <group android:name="wrapper_2">
+                <clip-path
+                    android:name="svgid_12__1"
+                    android:pathData="M 0 0 Z"/>
+                <path
+                    android:name="path_4"
+                    android:pathData="M 17.2 -52.4 L 44.2 -52.4 L 44.2 -28.2 L 17.2 -28.2 Z"
+                    android:fillColor="#fc2251"
+                    android:strokeWidth="1"/>
+            </group>
+        </group>
+    </group>
+    <group android:name="group_4">
+        <path
+            android:name="path_5"
+            android:pathData="M 22.388 -32.971 L 39.316 -47.18 L 39.959 -46.414 L 23.031 -32.205 Z"
+            android:fillColor="#ffffff"
+            android:strokeWidth="1"/>
+        <group android:name="svgid_14_"/>
+        <group android:name="wrapper_5">
+            <clip-path
+                android:name="svgid_14__1"
+                android:pathData="M 0 0 Z"/>
+            <group android:name="group_3">
+                <path
+                    android:name="path_6"
+                    android:pathData="M 197.9 135.6 L -178.1 135.6 L -178.1 -94.4 L 197.9 -94.4 L 197.9 135.6 Z M -177.1 134.6 L 196.9 134.6 L 196.9 -93.4 L -177.1 -93.4 L -177.1 134.6 Z"
+                    android:fillColor="#ffffff"
+                    android:strokeWidth="1"/>
+                <group android:name="svgid_16_"/>
+                <group android:name="wrapper_4">
+                    <clip-path
+                        android:name="svgid_16__1"
+                        android:pathData="M 0 0 Z"/>
+                    <group android:name="group_2">
+                        <path
+                            android:name="path_7"
+                            android:pathData="M 17.6 -51.9 L 44.6 -51.9 L 44.6 -27.7 L 17.6 -27.7 Z"
+                            android:fillColor="#bf0f2d"
+                            android:strokeWidth="1"/>
+                        <path
+                            android:name="path_8"
+                            android:pathData="M 45.1 -27.1 L 17.1 -27.1 L 17.1 -52.3 L 45.1 -52.3 L 45.1 -27.1 Z M 18.1 -28.1 L 44.1 -28.1 L 44.1 -51.3 L 18.1 -51.3 L 18.1 -28.1 Z"
+                            android:fillColor="#ffffff"
+                            android:strokeWidth="1"/>
+                    </group>
+                </group>
+            </group>
+        </group>
+    </group>
+    <group android:name="group_9">
+        <path
+            android:name="path_9"
+            android:pathData="M 4.922 29.568 L 31.272 7.452 L 32.301 8.678 L 5.95 30.793 Z"
+            android:fillColor="#ffffff"
+            android:strokeWidth="1"/>
+        <group android:name="svgid_20_"/>
+        <group android:name="wrapper_7">
+            <clip-path
+                android:name="svgid_20__1"
+                android:pathData="M 0 0 Z"/>
+            <group android:name="group_5">
+                <path
+                    android:name="path_10"
+                    android:pathData="M -304.7 -64.2 L 277.6 -64.2 L 277.6 291.4 L -304.7 291.4 Z"
+                    android:fillColor="#ffffff"
+                    android:strokeWidth="1"/>
+                <group android:name="svgid_24_"/>
+                <group android:name="wrapper_6">
+                    <clip-path
+                        android:name="svgid_24__1"
+                        android:pathData="M 0 0 Z"/>
+                    <path
+                        android:name="path_11"
+                        android:pathData="M -2.3 0.2 L 39.6 0.2 L 39.6 37.8 L -2.3 37.8 Z"
+                        android:fillColor="#ffffff"
+                        android:strokeWidth="1"/>
+                </group>
+            </group>
+        </group>
+        <group android:name="group_8">
+            <path
+                android:name="path_12"
+                android:pathData="M 5.732 30.46 L 32.082 8.344 L 33.111 9.569 L 6.761 31.685 Z"
+                android:fillColor="#fc2251"
+                android:strokeWidth="1"/>
+            <group android:name="svgid_26_"/>
+            <group android:name="wrapper_9">
+                <clip-path
+                    android:name="svgid_26__1"
+                    android:pathData="M 0 0 Z"/>
+                <group android:name="group_7">
+                    <path
+                        android:name="path_13"
+                        android:pathData="M 278.4 292.2 L -305.5 292.2 L -305.5 -64.9 L 278.4 -64.9 L 278.4 292.2 Z M -303.9 290.7 L 276.9 290.7 L 276.9 -63.4 L -303.9 -63.4 L -303.9 290.7 Z"
+                        android:fillColor="#fc2251"
+                        android:strokeWidth="1"/>
+                    <group android:name="svgid_28_"/>
+                    <group android:name="wrapper_8">
+                        <clip-path
+                            android:name="svgid_28__1"
+                            android:pathData="M 0 0 Z"/>
+                        <group android:name="group_6">
+                            <path
+                                android:name="path_14"
+                                android:pathData="M -1.5 1.1 L 40.4 1.1 L 40.4 38.7 L -1.5 38.7 Z"
+                                android:fillColor="#000"
+                                android:strokeWidth="1"/>
+                            <path
+                                android:name="path_15"
+                                android:pathData="M 41.1 39.5 L -2.3 39.5 L -2.3 0.4 L 41.1 0.4 L 41.1 39.5 Z M -0.8 38 L 39.5 38 L 39.5 1.9 L -0.8 1.9 L -0.8 38 Z"
+                                android:fillColor="#000"
+                                android:strokeWidth="1"/>
+                        </group>
+                    </group>
+                </group>
+            </group>
+        </group>
+    </group>
 </vector>
