--- a/Corona-Warn-App/src/main/res/values-night/colors.xml
+++ b/Corona-Warn-App/src/main/res/values-night/colors.xml
@@ -2,9 +2,9 @@
 <resources>
 
     <!-- Brand Colors -->
-    <color name="colorBrandPrimary">#D13F3F</color>
-    <color name="colorBrandSecondary">#80CDEC</color>
-    <color name="colorBrandTertiary">#994866</color>
+    <color name="colorBrandPrimary">#FC2251</color>
+    <color name="colorBrandSecondary">#25ba6c</color>
+    <color name="colorBrandTertiary">#EA003D</color>
 
     <!-- Backgrounds and Separators -->
     <color name="colorBackground">#000000</color>
@@ -19,25 +19,25 @@
     <color name="colorTextPrimary2">#99FFFFFF</color>
     <color name="colorTextPrimary3">#4DFFFFFF</color>
     <color name="colorTextEmphasizedButton">#FFFFFF</color>
-    <color name="colorTextSemanticRed">#FF919A</color>
-    <color name="colorTextSemanticGreen">#6ACC8B</color>
-    <color name="colorTextSemanticNeutral">#B8C8D9</color>
+    <color name="colorTextSemanticRed">#F7527E</color>
+    <color name="colorTextSemanticGreen">#25BA6C</color>
+    <color name="colorTextSemanticNeutral">#9EA8A6</color>
     <color name="colorTextTint">#83D2F2</color>
 
     <!-- Semantic -->
-    <color name="colorSemanticHighRisk">#C4314A</color>
-    <color name="colorSemanticHighRiskPressed">#CA465C</color>
-    <color name="colorSemanticLowRisk">#378250</color>
-    <color name="colorSemanticLowRiskPressed">#378250</color>
-    <color name="colorSemanticNeutralRisk">#5D6E80</color>
-    <color name="colorSemanticNeutralRiskPressed">#556675</color>
-    <color name="colorSemanticUnknownRisk">#232324</color>
-    <color name="colorSemanticUnknownRiskPressed">#39393A</color>
+    <color name="colorSemanticHighRisk">#EA003D</color>
+    <color name="colorSemanticHighRiskPressed">#FC2251</color>
+    <color name="colorSemanticLowRisk">#25BA6C</color>
+    <color name="colorSemanticLowRiskPressed">#00A35A</color>
+    <color name="colorSemanticNeutralRisk">#6B8384</color>
+    <color name="colorSemanticNeutralRiskPressed">#556666</color>
+    <color name="colorSemanticUnknownRisk">#474747</color>
+    <color name="colorSemanticUnknownRiskPressed">#353535</color>
 
     <!-- Accent -->
-    <color name="colorAccentTintButton">#25ba6c</color>
-    <color name="colorAccentTintButtonPressed">#25ba6c</color>
-    <color name="colorAccentTintIcon">#25ba6c</color>
+    <color name="colorAccentTintButton">#25BA6C</color>
+    <color name="colorAccentTintButtonPressed">#00A35A</color>
+    <color name="colorAccentTintIcon">#25BA6C</color>
 
     <!-- Misc -->
     <color name="colorTransparent">#00FFFFFF</color>
